--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm fixed-top">
+    <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">Efrata Problem Complaint <small>v.1.0</small></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,7 +33,7 @@
                 </ul>
             </div>
         </div>
-    </nav>
+    </nav> -->
     <!-- Jumbotron -->
     <section class="jumbotron" id="Home">
         <h1 class="display-4 text-center jumbotron-text"><b>Efrata Problem Complaint</b></h1>
